--- a/web/src/pages/home/Accommodations.css
+++ b/web/src/pages/home/Accommodations.css
@@ -57,8 +57,8 @@
 
 .accocard-content {
   padding: 15px 0;
-  overflow: hidden;
-}
+  /* overflow: hidden;  */
+} 
 
 .accocard-title {
   width: 90%;
