data gets in property

--- a/web/src/pages/about/about.css
+++ b/web/src/pages/about/about.css
@@ -7,7 +7,7 @@
     font-style: normal;
 }
 
-.about__subtitle-container h3, h4{
+.about__subtitle-container h3, .about__subtitle-container h4{
     font-family: 'Kanit', sans-serif;
     font-weight: 400;
     font-size: 1em;
