feat: implement filter section and update accommodations layout

--- a/web/src/components/base/FilterButton.css
+++ b/web/src/components/base/FilterButton.css
@@ -1,5 +1,6 @@
 .filter-button {
-    display: flex;
+    /* om de filter knopje momenteel niet te zien krijgen */
+    display: none; 
     align-items: center;
     gap: 8px;
     padding: 8px 12px;
@@ -27,32 +28,23 @@
     color: black;
 }
 
-@media (max-width: 768px) {
+
+
+@media (max-width: 480px) {
     .filter-button {
         font-size: 14px;
         padding: 6px 10px;
-        transform: translateY(-0.3rem);
+        transform: translateY(-0.02rem);
         display: flex;
         justify-content: center; 
         align-items: center; 
-        margin: 0 auto; 
-        width: auto; 
+        margin: left; 
+        margin-left: 20px;
+        width: 100px; 
       }
 
     .filter-button svg {
         width: 20px; 
         height: 20px;
-    }
-}
-
-@media (max-width: 480px) {
-    .filter-button {
-        font-size: 10px; 
-        padding: 5px 8px; 
-    }
-
-    .filter-button svg {
-        width: 18px; 
-        height: 18px;
     }
 }
