--- a/web/src/components/base/FilterButton.css
+++ b/web/src/components/base/FilterButton.css
@@ -1,18 +1,18 @@
 .filter-button {
-    /* om de filter knopje momenteel niet te zien krijgen */
     display: none; 
     align-items: center;
-    gap: 8px;
-    padding: 8px 12px;
+    justify-content: center; 
     background-color: #ffffff;
     border: none;
     color: #000;
     cursor: pointer;
-    border-radius: 20px;
+    border-radius: 50%; 
     font-size: 16px;
     transition: background-color 0.3s;
     border: #bababa solid 1px;
     transform: translateY(1rem);
+    width: 50px; 
+    height: 50px; 
 }
 
 .filter-button svg {
@@ -28,20 +28,18 @@
     color: black;
 }
 
-
-
 @media (max-width: 480px) {
     .filter-button {
         font-size: 14px;
-        padding: 6px 10px;
-        transform: translateY(-0.02rem);
+        padding: 6px; 
+        transform: translateY(0em);
         display: flex;
         justify-content: center; 
         align-items: center; 
-        margin: left; 
         margin-left: 20px;
-        width: 100px; 
-      }
+        width: 40px; 
+        height: 40px; 
+    }
 
     .filter-button svg {
         width: 20px; 
