margin on modify button added, the modify button on the guest dashbord has the samen size as the buttons from the host dashboard. Also added backgrond-color changing to the button on host dashboard

--- a/web/src/features/hostdashboard/settingshostdashboard.css
+++ b/web/src/features/hostdashboard/settingshostdashboard.css
@@ -102,13 +102,17 @@
     background-color: var(--secondary-color);
     border-radius: 15px;
     padding: 0.4rem;
-    margin-left: 2%;
+    margin-left: 5%;
     width: 2rem;
     height: 2rem;
     position: relative;
     text-align: center;
     cursor: pointer;
   }
+
+.host-icon-background:hover {
+    background-color: #5a9bc7;
+}
 
 @media (max-width: 768px) {
     .horizontalOptions {
