--- a/web/src/features/guestdashboard/guestdashboard.css
+++ b/web/src/features/guestdashboard/guestdashboard.css
@@ -295,9 +295,10 @@
 
 .edit-icon-background {
     background-color: #0D9813;
-    border: 1px solid #0D9813;
+    /* border: 1px solid #0D9813; */
     border-radius: 15px;
     padding: 0.4rem;
+    margin-left: 5%;
     width: 2rem;
     height: 2rem;
     text-align: center;
