fixing the width issues on two homepages for accommodations

--- a/web/src/pages/home/Accommodations.css
+++ b/web/src/pages/home/Accommodations.css
@@ -26,9 +26,9 @@
 }
 
 .accocard {
-  width: 300px;
+  width: 100%;
   height: auto;
-  max-width: 100%;
+  max-width: 450px;
   margin: 1%;
   margin-top: 10px;
   background-color: #fff;
