The icon on both dashboard looks the same now

--- a/web/src/features/guestdashboard/guestdashboard.css
+++ b/web/src/features/guestdashboard/guestdashboard.css
@@ -28,15 +28,20 @@
     flex-direction: row;
     justify-content: space-between;
     cursor: pointer;
-    margin-bottom: 10px;
+    margin-bottom: 15px;
     align-items: center;
-    min-width: 10vw;
-    width: 12.5rem;
-    border: 0.5px solid black;
+    width: 200px;
+    border: 0.1px solid black;
     border-radius: 15px;
     padding: 5px;
     box-sizing: border-box;
     transition: all 0.3s ease;
+    text-align: center;
+    height: 8vh;
+    padding-left: 1vh;
+    font-size: 1rem;
+    padding-right: 1rem;
+    justify-content: flex-start;
 }
 
 .wijzers img {
