--- a/app/Domits/android/app/src/main/res/values/styles.xml
+++ b/app/Domits/android/app/src/main/res/values/styles.xml
@@ -1,9 +1,15 @@
 <resources>
 
-    <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.DayNight.NoActionBar">
-        <!-- Customize your theme here. -->
         <item name="android:editTextBackground">@drawable/rn_edit_text_material</item>
+    </style>
+
+    <style name="SplashScreenTheme" parent="SplashScreen_SplashTheme">
+        <item name="colorPrimary">@color/primary_green</item>
+    </style>
+
+    <style name="MainSplashScreenTheme" parent="Theme.AppCompat.DayNight.NoActionBar">
+        <item name="android:windowBackground">@drawable/launch_screen</item>
     </style>
 
 </resources>
