--- a/app/Domits/android/app/src/main/res/values/styles.xml
+++ b/app/Domits/android/app/src/main/res/values/styles.xml
@@ -4,8 +4,10 @@
         <item name="android:editTextBackground">@drawable/rn_edit_text_material</item>
     </style>
 
-    <style name="SplashScreenTheme" parent="SplashScreen_SplashTheme">
-        <item name="colorPrimary">@color/primary_green</item>
+    <style name="Theme.App.Starting" parent="Theme.SplashScreen">
+        <item name="windowSplashScreenBackground">@color/primary_green</item>
+        <item name="windowSplashScreenAnimatedIcon">@drawable/domits_icon</item>
+        <item name="postSplashScreenTheme">@style/AppTheme</item>
     </style>
 
     <style name="MainSplashScreenTheme" parent="Theme.AppCompat.DayNight.NoActionBar">
