--- a/web/src/pages/home/FilterMain.css
+++ b/web/src/pages/home/FilterMain.css
@@ -1,78 +1,93 @@
 .filter-section {
-    border: 1px solid #d3d3d3;
-    padding: 15px;
-    margin-top: 15px;
-    border-radius: 8px;
-  }
-  
-  .slider-container {
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin-top: 10px;
-  }
-  
-  .price-inputs {
-    display: flex;
-    justify-content: space-between;
-    width: 100%;
-    margin-top: 10px;
+  border: 1px solid #d3d3d3;
+  padding: 15px;
+  margin-top: 15px;
+  border-radius: 8px;
+}
 
-  }
-  
-  .price-inputs div {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-  }
-  
-  .price-inputs label {
-    font-size: 14px;
-    color: #333;
-    margin-bottom: 5px;
-  }
-  
-  .price-inputs input {
-    width: 60px;
-    padding: 5px;
-    font-size: 14px;
-    text-align: center;
-    border-color: #000;
-    border-radius: 1rem;
-  }
-  .filter-select-option {
-    transform: scale(1.5); 
-    margin-right: 10px; 
-  }
-  
-  .facility-list {
-    margin-top: 15px;
-    display: flex;
-    flex-direction: column;
-  }
-  
-  .facility-item {
-    display: flex;
-    align-items: center;
-    margin-bottom: 5px;
-  }
-  
-  .facility-item input {
-    margin-right: 8px;
-  }
-  .show-more-text {
-    color: #007bff; 
-    text-decoration: underline; 
-    cursor: pointer; 
-  }
-  
-  .show-more-text:hover {
-    text-decoration: none; 
-  }
-  .FilterTitle{
-    color: #000;
-    font-size: 1rem;
-    font-weight: 500;
-  }
-  
+.slider-container {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 10px;
+}
+
+.price-inputs {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+  margin-top: 10px;
+
+}
+
+.price-inputs div {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.price-inputs label {
+  font-size: 14px;
+  color: #333;
+  margin-bottom: 5px;
+}
+
+.price-inputs input {
+  width: 60px;
+  padding: 5px;
+  font-size: 14px;
+  text-align: center;
+  border-color: #000;
+  border-radius: 1rem;
+}
+.filter-select-option {
+  transform: scale(1.5); 
+  margin-right: 10px; 
+}
+
+.facility-list {
+  margin-top: 15px;
+  display: flex;
+  flex-direction: column;
+}
+
+.facility-item {
+  display: flex;
+  align-items: center;
+  margin-bottom: 5px;
+}
+
+.facility-item input {
+  margin-right: 8px;
+}
+.show-more-text {
+  color: #007bff; 
+  text-decoration: underline; 
+  cursor: pointer; 
+}
+
+.show-more-text:hover {
+  text-decoration: none; 
+}
+.FilterTitle{
+  color: #000;
+  font-size: 1rem;
+  font-weight: 500;
+}
+.apply-filters-button{
+  background-color: #4caf50;
+  color: white;
+  padding: 10px 20px;
+  font-size: 1rem;
+  border: none;
+  border-radius: 0.5rem;
+  cursor: pointer;
+  margin-top: 10px;
+  margin-left: 3rem;
+}
+
+.apply-filters-button:hover{
+background-color: #45a049;
+}
+
