--- a/web/src/features/guestdashboard/guestmessages/styles/guestChatScreen.css
+++ b/web/src/features/guestdashboard/guestmessages/styles/guestChatScreen.css
@@ -1,4 +1,4 @@
-.host-chat-screen {
+.guest-chat-screen {
     border: 1px solid #dee2e6;
     background-color: #fff;
     display: flex;
@@ -13,7 +13,7 @@
     padding: 0 0.25rem 0.25rem 0.25rem;
 }
 
-.chat-header {
+.guest-chat-header {
     height: 15%;
 }
 
@@ -35,21 +35,21 @@
     border-radius: 20%;
 }
 
-.chat-message.sent {
+.guest-chat-message.sent {
     display: flex;
     flex-direction: column;
     justify-content: flex-end;
     margin-bottom: 1rem;
 }
 
-.chat-message.sent .message-header {
+.guest-chat-message.sent .guest-message-header {
     display: flex;
     flex-direction: row-reverse;
     margin-bottom: 0.5rem;
     gap: 0.5rem;
     align-items: center;
 }
-.chat-message.received .message-header {
+.guest-chat-message.received .guest-message-header {
     display: flex;
     flex-direction: row;
     margin-bottom: 0.5rem;
@@ -57,10 +57,10 @@
     align-items: center;
 }
 
-.chat-message.sent .message-content {
+.guest-chat-message.sent .guest-message-content {
     display: inline-block;
 
-    background-color: var(--secondary-color);
+    background-color: var(--primary-color);
     color: white;
     border-radius: 0.5rem;
     padding: 0.3rem 1rem;
@@ -70,14 +70,14 @@
     word-wrap: break-word;
     border-bottom-right-radius: 0;
 }
-.chat-message.received {
+.guest-chat-message.received {
     display: flex;
     flex-direction: column;
     margin-bottom: 1rem;
 }
 
-.chat-message.received .message-content {
-    background-color: var(--primary-color);
+.guest-chat-message.received .guest-message-content {
+    background-color: var(--secondary-color);
     color: white;
     display: inline-block;
     border-radius: 0.5rem;
@@ -87,11 +87,11 @@
     word-wrap: break-word;
     border-bottom-left-radius: 0;
 }
-.sender-name {
+.guest-sender-name {
     font-size: 1rem;
     color: black;
 }
-.chat-input {
+.guest-chat-input {
     display: flex;
     flex-direction: row;
     justify-content: space-around;
@@ -99,18 +99,18 @@
     height: 12.5%;
 }
 
-.message-input-textarea {
+.guest-message-input-textarea {
     height: 60%;
     width: 80%;
     resize: none;
     border-radius: 1rem;
 }
-.message-input-send-button {
+.guest-message-input-send-button {
     height: 50%;
     width: 15%;
     align-self: center;
     border-radius: 1rem;
-    background-color: var(--secondary-color);
+    background-color: var(--primary-color);
     color: white;
     border: none;
     cursor: pointer;
