--- a/web/src/features/auth/Register.css
+++ b/web/src/features/auth/Register.css
@@ -93,9 +93,31 @@ label {
     align-items: center;
     display: inline-flex;
 }
-.selected-flag{
+
+.PhoneRegisterInput {
+    /* width: 100%;
+    height: auto;
+    padding: 8px 15px;
+    margin-top: 5px;
+    margin-bottom: 12px;
+    background: white;
+    box-shadow: none;
+    border-radius: 5px;
+    border: 1px solid #999;
+    justify-content: flex-start;
+    align-items: center;
+    display: inline-flex; */
+}
+
+.form-control {
+    width: 120%;
+
+}
+
+.selected-flag {
     background-color: white;
 }
+
 .flag-dropdown {
     border: 5px solid #cacaca;
     /* border-radius: 3px 0 0 3px; */
