--- a/web/src/pages/home/homePage.css
+++ b/web/src/pages/home/homePage.css
@@ -36,8 +36,7 @@ body.hide-header .app-header {
   padding-top: 32vh;
   color: white;
   text-align: center;
-  font-size: 4em;
-  height: 15vh;
+  font-size: 4rem;
   width: 100%;
   font-weight: 100;
 }
@@ -46,6 +45,7 @@ body.hide-header .app-header {
   font-size: 3rem;
   padding-bottom: 2vh;
 }
+
 
 .domits-searchbarCon {
   padding-top: 1vw;
