--- a/web/src/features/bookingengine/BookingCalendar.module.css
+++ b/web/src/features/bookingengine/BookingCalendar.module.css
@@ -44,6 +44,7 @@
 }
 .calendar {
     width: 50%;
+    height: 400px;
     background: #FFFFFF;
     border-radius: 0.625rem;
     box-shadow: 0 0 0.625rem rgba(0, 0, 0, 0.2);
